syntax = "proto3";

package opscontrol.api.parameter;

enum ParameterType {
    PT_UNKNOWN = 0;
    PT_VAR = 1;
    PT_FILE = 2;
}

enum WellKnown {
    WN_NOOP = 0;
    WN_SERVICE_MESH_SERVICE = 1;
    WN_TLS_ACCOUNT = 2;
    WN_TLS_CERTIFICATE = 3;
}

